Thu Jan 12 13:09:25 GMT 2012  Olly Betts <olly@survex.com>

	* common/str.cc: Special cases for 0 in tostring() templates aren't
	  actually needed, but special casing single digit numbers may be
	  worthwhile anyway, so change comments to FIXME ones about checking
	  this.
	* tests/internaltest.cc: Test str() on unsigned 0, and some negative,
	  signed positive, and unsigned positive single digits values.

Wed Jan 11 13:03:54 GMT 2012  Olly Betts <olly@survex.com>

	* backends/multi/multi_alltermslist.h: Fix filename in @file.

Wed Jan 11 12:53:44 GMT 2012  Olly Betts <olly@survex.com>

	* api/documentterm.h,api/maptermlist.h,api/omenquireinternal.h,
	  backends/brass/,backends/chert/,backends/database.h,
	  backends/document.h,backends/inmemory/inmemory_alltermslist.h,
	  backends/inmemory/inmemory_database.h,
	  backends/inmemory/inmemory_positionlist.h,
	  backends/multi/multi_postlist.h,backends/multi/multi_termlist.h,
	  backends/positionlist.h,backends/remote/net_termlist.h,
	  backends/valuestats.h,common/,include/xapian/query.h,matcher/,
	  queryparser/queryparser_internal.h,tests/harness/,
	  tests/perftest/freemem.h,tests/perftest/runprocess.h: Convert
	  comments at the start of files to @file and @brief doxygen comments.

Wed Jan 11 11:36:55 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/phrasepostlist.h: Remove lone "----START-LICENCE----" -
	  the rest got removed ages ago.

Wed Jan 11 11:23:04 GMT 2012  Olly Betts <olly@survex.com>

	* common/replicate_utils.h: Fix "@raises" to "@exception".

Wed Jan 11 11:21:31 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.h: Fix "@parameter" to "@param".

Wed Jan 11 11:20:11 GMT 2012  Olly Betts <olly@survex.com>

	* common/debuglog.h: Fix "@msg" to "@a msg" in doxygen comment.

Wed Jan 11 11:18:50 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.h: Correct @exceptions to @exception.

Wed Jan 11 10:48:05 GMT 2012  Olly Betts <olly@survex.com>
